# vhp-segmentation

./: .gitignore  README.md  requirements.txt  setup.cfg
COM/: convert_ge_images_to_nifti.py  get_index.sh
DOC/: besler_bmen619_final_report.tex
