[metadata]
name = vhp
author = Brendon Besler
author-email = brendon.belser@ucalgary.ca
summary = MRI Segmentation of Visible Human Project MRI images
description-content-type = text/x-rst; charset=UTF-8
home-page = https://github.com/b-besler/
project_urls =
    Source Code = https://github.com/b-besler/vhp-segmentation
classifier =
    Development Status :: 1 - Planning
    Intended Audience :: Developers
    Intended Audience :: Healthcare Industry
    Intended Audience :: Science/Research
    Programming Language :: Python
keywords =
    medical
    imaging

[pbr]
skip_changelog = 1
skip_authors = 1

[entry_points]
